[package]
name = "kffmpeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
data-encoding = "2.4.0"
dirs = "5.0.1"
regex = "1.10.2"
ring = "0.17.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
